--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.4",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "15.3.3",
     "rc-picker": "4.8.0",
     "react": "^19.0.0",
